# Loop_closure

./: .gitignore  CMakeLists.txt  README.md  feature_detection.cpp  poses_database.g2o  rtabmap.ini
cloud_assemble/: CMakeLists.txt  cloud_assemble.cpp  optimized.g2o
dataset_processor/: CMakeLists.txt  README.md
dataset_processor/include/: file_parser.h  g2o_parser.h  graph.h  icp.h  keypoints_gui.h  sift_icp.h
dataset_processor/src/: calculate_rt.cpp  mouse_click.cpp
docs/: TODO.md  reading_resources.md
launch_scripts/: README.md  export_rgb.launch  realsense_launch_record.sh
manual_icp/: CMakeLists.txt  README.md  feature_detection.cpp  feature_detectors.cpp  log.md  sift_icp.cpp
plot_slam/: plot_slam6d.py
plot_slam/cartographer_scripts/: error_log.txt  my_backpack_2d.launch  my_backpack_2d.lua  rosbag_validate_output.txt
registration_icp/: CMakeLists.txt  README.md  registration_icp.cpp
rtabmap_configurations/: export_rgb.launch  realsense_launch_record.sh  rtabmap.ini
slam6d_node/: CMakeLists.txt  README.md  package.xml
slam6d_node/src/: pcd_extract.cpp  pcd_sync.cpp
visual_odometry/: CMakeLists.txt
visual_odometry/include/: generate_graph.h  graph.h  sift_icp.h
visual_odometry/src/: icp_odometry.cpp  relative_edges.cpp
